--- a/Schemas/schemasCompil.tex
+++ b/Schemas/schemasCompil.tex
@@ -434,11 +434,13 @@ callback
 \section{génération .mli}
  
 \newpage
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%   OCava   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%   OCaml-Java   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Ocaml-Java}
+\subsection{
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%   OCava   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Génération pour Ocaml-Java}
+\subsection{Génération de code pour Ocaml-Java}
+L'idée est de partir de 
 Le type top manipulé sera le type d'instance objet de Ocaml-Java :
 \begin{OCaml}
 type top = java'lang'Object java_instance;;
